# cpp-uuid

./: CMakeLists.txt
include/: guid.h  id.h  uuid.h
src/: uuid.cpp
